--- a/notes/digsigs.tex
+++ b/notes/digsigs.tex
@@ -4,21 +4,21 @@
 
 \subsection{Motivation}
 
-First, we motivate the need for a new asymmetric primitive, digital signatures, required to ensure message authenticity.
+First, we motivate the need for a new asymmetric primitive, \emph{digital signatures}, which are required to ensure message authenticity.
 
 
 \begin{figure}[h]
 \centering
 \scalebox{0.8}{\input{digsigs/mitm_diffie_helman}}
-  \caption{Illustration of a Man-in-the-Middle attack on Diffie-Helman key exchange (left), and a solution deployed in TLS using digital signatures (right).  $\{\}$ indicates an asymmetric encryption operation under the specified public/secret keys.  MS is the final master shared secret.}
+  \caption{Illustration of a Man-in-the-Middle attack on Diffie-Hellman key exchange (left), and a solution deployed in TLS using digital signatures (right).  $\{\}$ indicates an asymmetric encryption operation under the specified public/secret keys.  MS is the final master shared secret.}
 \label{fig:mitmdiffie}
 \end{figure}
 
-Consider the use of a key exchange algorithm such as Diffie-Helman over a channel with no guarantee of authenticity, like the Internet.  Recall that Diffie-Helman involves selection of a random group element $x, y$ from ${Z}_{|G|}$ by a client and server respectively, then exchanging $g$ raised to each private value and exchanging these values as $X$ and $Y$, respectively.  They then raise the received values to their private exponents, computing $X^y$ and $Y^x$ as their shared secret.  This works because $Y^x=g^{yx}=g^{xy}=X^y$.  But note this is not effective against passive attackers: as shown in Figure~\ref{fig:mitmdiffie}, an active \emph{Man-in-the-Middle} adversary in the middle of a communication channel can simply perform independent key exchange with both sides, picking their own $x$ and $y$ values, and tampering with and decrypting messages in the middle.  The malicious man in the middle then simply reencrypts and forwards all messages from the client to the server, violating any confidentiality provided by further encryptions.
+Consider the use of a key exchange algorithm such as Diffie-Hellman over a channel with no guarantee of authenticity, such as the Internet. Recall that Diffie-Hellman involves selection of a random group element $x, y$ from ${Z}_{|G|}$ by a client and server respectively, then exchanging $g$ raised to each private value and exchanging these values as $X$ and $Y$, respectively.  They then raise the received values to their private exponents, computing $X^y$ and $Y^x$ as their shared secret. This works because $Y^x=g^{yx}=g^{xy}=X^y$. But note this is not effective against passive attackers: as shown in Figure~\ref{fig:mitmdiffie}, an active \emph{Man-in-the-Middle} adversary in the middle of a communication channel can simply perform independent key exchange with both sides, picking their own $x$ and $y$ values, and tampering with and decrypting messages in the middle. The malicious man in the middle can then simply reencrypt and forward all messages from the client to the server, violating any confidentiality provided by further encryptions.
 
-Note that this problem is not limited to Diffie-Helman based protocols; in any protocol that exchanges secrets, an active adversary can man-in-the-middle attack a session in progress.  Because there is no way to check that the received values are actually sent by the intended server, there is no way for the client to ensure the integrity of the data used to compute its secret values (in the Diffie-Helman protocol, $Y$).
+Note that this problem is not limited to Diffie-Hellman based protocols; in any protocol that exchanges secrets, an active adversary can man-in-the-middle attack a session in progress.  Because there is no way to check that the received values are actually sent by the intended server, there is no way for the client to ensure the integrity of the data used to compute its secret values (in the Diffie-Hellman protocol, $Y$).
 
-We thus motivate and explore an asymmetric variant of the message integrity constructs we have explored earlier in the notes.  Here, data will be \emph{signed} by a secret key, and can be \emph{verified} by the corresponding public key.  Assuming we have such a primitive, the Diffie-Helman protocol can be modified as shown in the right side of Figure~\ref{fig:mitmdiffie}, taken from the deployed TLS key exchange handshake.  In this protocol, the server presents the client with a certificate CERT, that signs the server's public key with the private key of a known authority, hardcoded on a client device.  This binds the secret key $sk_s$ to the identity the user expects of the server.  This secret key is then used to sign all protocol parameters, including nonces and the pre-secret value $X$, binding these values to the identity of the server.  The final master secret is then generated with the exchanged Diffie-Helman secrets, as well as nonce values to prevent replay attacks.
+We thus motivate and explore an asymmetric variant of the message integrity constructs we have explored earlier in the notes.  Here, data will be \emph{signed} by a secret key, and can be \emph{verified} by the corresponding public key.  Assuming we have such a primitive, the Diffie-Hellman protocol can be modified as shown in the right side of Figure~\ref{fig:mitmdiffie}, taken from the deployed TLS key exchange handshake.  In this protocol, the server presents the client with a certificate CERT, that signs the server's public key with the private key of a known authority, hardcoded on a client device.  This binds the secret key $sk_s$ to the identity the user expects of the server.  This secret key is then used to sign all protocol parameters, including nonces and the pre-secret value $X$, binding these values to the identity of the server.  The final master secret is then generated with the exchanged Diffie-Hellman secrets, as well as nonce values to prevent replay attacks.
 
 In practice, even such certificate checks may not guarantee security in the presence of implementation failures.  One example is the well known iOS ``goto fail" exploit, present in the processing of the above protocol.  The following code was present in the verification of certificates in the server key exchange:
 
@@ -35,7 +35,7 @@ if ((err = SSLHashSHA1.final(&hashCtx, &hashOut)) != 0)
 err = sslRawVerify(...);
 \end{verbatim}
 
-Note the second goto fail line present in the above code.  Because of C's scoping rules, and because ``if" blocks with no braces only automatically include the first line typed after them, the second mistake line was out of scope of the previous if statement.  This means it runs unconditionally, whether or not an error was encountered.  Worse still, the \texttt{fail} subsection of code expected the \texttt{err} label to be set to a non-zero value; after all, all if clauses check for and ensure this is the case.  However, because this was being called unconditionally, it would be called if even no error exists and \texttt{err} \emph{was} set to 0.  If \texttt{err} is set to 0 (should never happen in programmer expectations), the fail handler allows a connection to go through, bypassing further checks of the certificate.
+Note the second \texttt{goto fail} line present in the above code.  Because of C's scoping rules, and because ``if" blocks with no braces only automatically include the first line typed after them, the second mistake line was out of scope of the previous if statement.  This means it runs unconditionally, whether or not an error was encountered.  Worse still, the \texttt{fail} subsection of code expected the \texttt{err} label to be set to a non-zero value; after all, all if clauses check for and ensure this is the case.  However, because this was being called unconditionally, it would be called if even no error exists and \texttt{err} \emph{was} set to 0.  If \texttt{err} is set to 0 (should never happen in programmer expectations), the fail handler allows a connection to go through, bypassing further checks of the certificate.
 
 So, even invalid certificates would immediately jump to fail and succeed, assuming they did not trigger the SHA1 error check or any previous error checks above the jump to fail.  Indeed this was the case, and allowed an attacker to inject false certificates into TLS exchanges with iOS devices to fool them into accepting invalid server keys.  We leave the analysis of concrete attacks an adversary could perform with this bug in their arsenal to the reader, but note that any theoretical key exchange guarantees are only as good as their implementation.
 
@@ -121,7 +121,7 @@ Note that our adversary generated a valid signature for $M^*$ making a single si
 
 Note that the above argument does not depend on a random choice of $M*$, and indeed applies to any $M^*$, which could be passed into our adversary as input.  This makes our attack a \emph{universal} forgery against RSA; that is, $\forall$ messages $M^*$, our adversary can provide a forged signature $\sigma^*$ without querying the real signature routine on $M^*$ with non-negligible advantage.  A weaker kind of forgery, \emph{existential forgery}, exists in a scheme if $\exists M^*$ such that an adversary can generate a forged signature $\sigma^*$ without querying the real signature routine on $M^*$ with non-negligible advantage.  Note that the existence of a universal forgery attack implies an existential forgery attack but not vice-versa, making universal forgery a stronger form of forgery than existential forgery.
 
-\subsection{Insecurity in Practice: PKCSv1.5}
+\subsection{Insecurity in Practice: PKCS\#1 v1.5}
 
 
 \begin{figure}[h]
@@ -150,7 +150,7 @@ Note that the above argument does not depend on a random choice of $M*$, and ind
 
 Figure~\ref{fig:pkcs15sign} shows a construction deployed in practice for RSA-based signing, PKCSv1.5.  In this scheme, the general structure of our plaintext RSA signing scheme is preserved, but the message is padded with additional data, and a hash of the message is included for exponentiation with the private RSA exponent rather than the full message.  This hash appears to protect against the form of attack we have seen above.
 
-Intuitively, this makes malleability attacks like the form we have seen above more difficult; even if an adversary could use the techniques we show to generate a valid $\sigma$ for some $x=H(M')$ given a signature $\sigma^*$ for $H(M^*)$, they would be unlikely to generate a signature that verifies for a known message, as they would need to provide some $M'$ to a verification oracle along with $\sigma$ such that $H(M')=x$, inverting the hash function used for signing.  Use of a preimage resistant hash function therefore poses a barrier to an adversary's forgery attempts; they can generate a signature that is valid for \emph{some} message, without the ability to produce the message for which that signature is valid.  We formalize this intuition in the proof of Full-Domain RSA that follows.
+Intuitively, this makes malleability attacks like the form we have seen above more difficult; even if an adversary could use the techniques we show to generate a valid $\sigma$ for some $x=H(M')$ given a signature $\sigma^*$ for $H(M^*)$, they would be unlikely to generate a signature that verifies for a known message, as they would need to provide some $M'$ to a verification oracle along with $\sigma$ such that $H(M')=x$, inverting the hash function used for signing.  Use of a pre-image resistant hash function therefore poses a barrier to an adversary's forgery attempts; they can generate a signature that is valid for \emph{some} message, without the ability to produce the message for which that signature is valid.  We formalize this intuition in the proof of Full-Domain RSA that follows.
 
 The padding in the scheme also appears to provide additional protections: If, for example, an adversary changes bits in the padding section of signed values, the mangled padding should produce an error and fail to verify, further restricting the adversary's ability to produce valid signature values for some message without querying the signing oracle.  However, as previously explored in the notes, red flags should be raised about the use of padding in a context able to generate padding-specific errors; in fact, because the padding scheme is similar to that in RSA PKCS\#1 v1.5 encryption, the same attack is usable to extract key material in our signing scheme, violating $\UFCMA_{\DS}$ security.  The proof is left as an exercise to the reader.
 
@@ -159,7 +159,7 @@ We now move to a formal proof of $\UFCMA_{\DS}$ security for a hash-based RSA co
 \subsection{A Secure Scheme: Full Domain RSA}
 
 
-We now introduce the full domain hash (FDH) RSA scheme, denoted $\DS$.  Figure~\ref{fig:fulldomrsa} shows the operation of this scheme, a natural extension of plaintext RSA that simply hashes the message before exponentiating with a secret exponent.  Note that we model the hash function as a random oracle, which masks some subtle technical issues surrounding use of a hash with RSA; because $H(M)$ needs to be raised to the $d$ (mod $N$), $H(M)$ must output an element of the RSA group that can be exponentiated in the group.  So, the hash function used depends on the choice of $d$, complicating analysis.  We ignore these details in our consideration of the protocol, as they can be solved in practice by using a fixed output length hash that is indifferentiable from random oracles using existing hash functions, and mapping the output of the function to the relevant RSA group.
+We now introduce the full domain hash (FDH) RSA scheme, denoted $\DS$.  Figure~\ref{fig:fulldomrsa} shows the operation of this scheme, which is a natural extension of plaintext RSA that simply hashes the message before exponentiating with a secret exponent.  Note that we model the hash function as a random oracle, which masks some subtle technical issues surrounding use of a hash with RSA; because $H(M)$ needs to be raised to the $d$ (mod $N$), $H(M)$ must output an element of the RSA group that can be exponentiated in the group.  So, the hash function used depends on the choice of $d$, which complicates analysis.  We ignore these details in our consideration of the protocol, as they can be solved in practice by using a fixed output length hash that is indifferentiable from random oracles using existing hash functions, and mapping the output of the function to the relevant RSA group.
 
 We now analyze the $\UFCMA_\DS$ security of our scheme.  We do so by reduction to RSA, showing specifically that for any adversary $A$ breaking the $\UFCMA_\DS$ of full domain RSA, we can construct an adversary $B$ for the RSA game with almost the same advantage.  Formally, let $q_h$ be the number of hash oracle queries performed by $A$ and $q_s$ be the number of signing oracle queries performed by $A$:
 
@@ -192,7 +192,7 @@ $\Horacle(M)$.  If this assumption is not met, we transform $A$ to an equivalent
 So, we can consider only $A$ that meet our assumptions without loss of generality, as if such an $A$ exists, there exists an $A'$ that runs in at most $1+q_s$ additional $\Horacle$ oracle queries with the same advantage.  Lemma 1 holds.
 
 \textbf{Toy example - No-message attack} Now, to build some intuition, let's first consider the case that $q_s = 0$, that is, 
-we are arguing about unforgeability in a no-message attack where no legitimate signatures are produced by the signing oracle for the adversary.  Our key challenge is to construct such an adversary $B$ for RSA OWF, we must use an adversary for $\UFCMA_{\DS}$ as a black box.  Figure~\ref{fulldomaintoy} shows such an adversary, as well as the games required to prove security.  Our general proof will proceed by choosing a point $Y$ as the output of a simulated hash oracle, where $Y$ represents the point the adversary of an RSA OWF game needs to invert as a challenge.  Because our hash function is a random oracle, to recover the original signed message, our $\UFCMA_{\DS}$ adversary will need to invert the hash function on some queried point.  Specifically, they must do this on the point corresponding to the hash of $M^*$, the challenge for which they provide a valid signature; because our hash function is a random oracle, they must do this to get any information about the output of the hash function on $M^*$, required by construction to generate a valid signature (if no information about $H(M^*)$ is known, every possible output signature is equally likely by the RSA permutation's properties as a permutation).
+we are arguing about unforgeability in a no-message attack where no legitimate signatures are produced by the signing oracle for the adversary.  Our key challenge is to construct such an adversary $B$ for RSA OWF; to do so, we must use an adversary for $\UFCMA_{\DS}$ as a black box.  Figure~\ref{fulldomaintoy} shows such an adversary, as well as the games required to prove security.  Our general proof will proceed by choosing a point $Y$ as the output of a simulated hash oracle, where $Y$ represents the point the adversary of an RSA OWF game needs to invert as a challenge.  Because our hash function is a random oracle, to recover the original signed message, our $\UFCMA_{\DS}$ adversary will need to invert the hash function on some queried point.  Specifically, they must do this on the point corresponding to the hash of $M^*$, the challenge for which they provide a valid signature; because our hash function is a random oracle, they must do this to get any information about the output of the hash function on $M^*$, required by construction to generate a valid signature (if no information about $H(M^*)$ is known, every possible output signature is equally likely by the RSA permutation's properties as a permutation).
 
 Such an adversary can, however, query the hash oracle on multiple points, and it is not clear for which point to provide them with the OWF challenge $Y$.  
 %Assume that $\advA$
@@ -287,7 +287,7 @@ flag $\bad$ to true should $M^* \ne M_{i^*}$. Let
 game $\G_1$ be the same as $\G_0$ except that  it chooses a random index $i^*
 \getsr [1,q]$ and checks if $M^*$ is equal to the $i\thh$ random oracle
 query. If not, it sets a flag $\bad$ to true and outputs $\false$, 
-Otherwise it checks if $\advA$'s output is a winning forgery, outputing
+Otherwise it checks if $\advA$'s output is a winning forgery, outputting
 $\true$ if so and $\false$ otherwise. Let $\good$ be the event that $\bad$ is
 not set in game $\G_0$, and we let $\good$ be the same event for $\G_1$ (a
 slight abuse of notation). Then we have that both games are
@@ -326,7 +326,7 @@ $(2)$ follows because $G_2, G_1$ differ only in the output of $\TabH[M^{M^*}]$ (
 
 $(3)$ follows from basic probability, and $(4)$ follows from our variant of the fundamental lemma of game playing, above.  $(5)$ follows as the probability that the good flag is set in $G_1$ is exactly equal to the probability that $M^* = M_{i^*}$, which is by definition the probability that the $i^*$th query of $q_h$ total queries to the hash oracle has as input $M^*$.  Because $i$ is independently uniformly sampled, this probability is equal for every choice of $i$, independent of all other values. $(6)$ follows as Lemma 1 states that $M^*$ will be exactly one of the queries to the hash oracle (in this case equal to the number of total queries, $q$, as $q_s=0$), making this probability exactly equal to $\frac{1}{q}$.  Note that concretely here, $q=q_h+1$ by Lemma 1.
 
-\textbf{Generalization of toy example to full proof}  We now must do a generalization of the above to cases where $q_s \geq 1$, that is, our black-box $\UFCMA_\DS$ adversary makes at least one signing query.  In these cases, we face a substantive challenge: because the hash function in our full domain RSA construction is used by the signing routine, it is not the case that sign function outputs are independent of the outputs of our hash function.  We therefore cannot simply return random points for both the sign and hash function, as this breaks the structure of signatures; for example, any adversary that runs \texttt{ver} on outputs of \texttt{sign} would receive outputs of $1$ with a valid signature and hash function, and $0$ if we return random points, altering its execution and therefore output with overwhelming probability.
+\textbf{Generalization of toy example to full proof.}  We now must do a generalization of the above to cases where $q_s \geq 1$, that is, our black-box $\UFCMA_\DS$ adversary makes at least one signing query.  In these cases, we face a substantive challenge: because the hash function in our full domain RSA construction is used by the signing routine, it is not the case that sign function outputs are independent of the outputs of our hash function.  We therefore cannot simply return random points for both the sign and hash function, as this breaks the structure of signatures; for example, any adversary that runs \texttt{ver} on outputs of \texttt{sign} would receive outputs of $1$ with a valid signature and hash function, and $0$ if we return random points, altering its execution and therefore output with overwhelming probability.
 
 We therefore must program the signature oracle to return points which constitute valid signatures for points on which the hash oracle has already been queried (by Lemma 1, we can assume this is always the case).  So, as desired, we have that $\AdvOWF{\RSAk}{\advB_{toy}} \ge \AdvUFCMA{\DS}{\advA}\cdotsm\frac{1}{q}$, completing the proof.
 
